--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="color-game.css">
 </head>
 <body>
+	<h1>The Great RGB Color Game</h1>
 	<div id="container">
-		<div class="square"></div>
 		<div class="square"></div>
 		<div class="square"></div>
 		<div class="square"></div>
