--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 		<div class="square"></div>
 		<div class="square"></div>
 	</div>
+	<script type="text/javascript" src="color-game.js"></script>
 </body>
 </html>
